<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/fugu_chat_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/my_toolbar" layout="@layout/fugu_layout_toolbar_center" />
    <androidx.core.widget.NestedScrollView android:id="@id/scroll_view" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/fugu_margin_15" android:layout_marginTop="@dimen/fugu_margin_10" android:layout_marginRight="@dimen/fugu_margin_15" android:layout_marginBottom="@dimen/fugu_margin_20">
            <androidx.cardview.widget.CardView android:padding="@dimen/fugu_padding_8" android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardBackgroundColor="@color/fugu_white" app:cardElevation="@dimen/fugu_elevation_4">
                <LinearLayout android:orientation="vertical" android:padding="@dimen/fugu_padding_10" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:id="@id/title_txt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fugu_title" />
                    <EditText android:id="@id/titie_view" android:background="@drawable/hippo_lead_form_data_shape" android:paddingLeft="@dimen/fugu_padding_10" android:paddingRight="@dimen/fugu_padding_10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/fugu_margin_10" android:minHeight="@dimen/fugu_dp_40" android:hint="@string/hippo_enter_title" android:maxLines="3" android:singleLine="false" android:maxLength="100" android:inputType="textCapSentences" />
                    <TextView android:id="@id/currency_txt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hippo_currency" />
                    <TextView android:gravity="center_vertical" android:id="@id/currency_type_view" android:background="@drawable/hippo_lead_form_data_shape" android:paddingLeft="@dimen/fugu_padding_10" android:paddingRight="@dimen/fugu_padding_10" android:layout_width="fill_parent" android:layout_height="@dimen/fugu_dp_40" android:layout_margin="@dimen/fugu_margin_10" android:layout_marginTop="@dimen/fugu_margin_10" android:text="USD ($)" android:drawableRight="@drawable/APKTOOL_DUMMY_28f" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView android:padding="@dimen/fugu_padding_8" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/fugu_margin_10" app:cardBackgroundColor="@color/fugu_white" app:cardElevation="@dimen/fugu_elevation_4">
                <LinearLayout android:orientation="vertical" android:padding="@dimen/fugu_padding_10" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:id="@id/description_txt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hippo_title_item_description" />
                    <EditText android:scrollbarStyle="insideInset" android:id="@id/item_description" android:background="@drawable/hippo_lead_form_data_shape" android:paddingLeft="@dimen/fugu_padding_10" android:paddingRight="@dimen/fugu_padding_10" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/fugu_margin_10" android:minHeight="@dimen/fugu_dp_40" android:hint="@string/hippo_item_description" android:maxLines="4" android:singleLine="false" android:maxLength="250" android:inputType="textCapSentences|textMultiLine" android:overScrollMode="always" />
                    <TextView android:id="@id/price_txt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/hippo_title_item_price" />
                    <EditText android:id="@id/item_price" android:background="@drawable/hippo_lead_form_data_shape" android:paddingLeft="@dimen/fugu_padding_10" android:paddingRight="@dimen/fugu_padding_10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/fugu_margin_10" android:minHeight="@dimen/fugu_dp_40" android:hint="@string/hippo_item_price" android:maxLines="1" android:singleLine="true" android:maxLength="10" android:digits="1234567890." android:inputType="number" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.recyclerview.widget.RecyclerView android:id="@id/recycler_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/fugu_margin_10" android:layout_marginBottom="@dimen/fugu_margin_10" />
            <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/fugu_text_size_normal" android:gravity="center" android:id="@id/total_count" android:layout_width="wrap_content" android:layout_height="@dimen/fugu_dp_60" android:text="@string/hippo_total_count" />
                <TextView android:textSize="@dimen/fugu_text_size_normal" android:textStyle="bold" android:gravity="center" android:layout_gravity="right" android:id="@id/add_option_view" android:layout_width="wrap_content" android:layout_height="@dimen/fugu_dp_60" android:text="@string/hippo_add_an_option" android:layout_alignParentRight="true" />
            </RelativeLayout>
            <androidx.appcompat.widget.AppCompatButton android:ellipsize="end" android:gravity="center" android:layout_gravity="center" android:id="@id/buttonSubmit" android:background="@drawable/default_rectangular_button_empty" android:paddingLeft="@dimen/fugu_padding_10" android:paddingRight="@dimen/fugu_padding_10" android:layout_width="fill_parent" android:layout_height="@dimen/hippo_button_height" android:layout_marginLeft="@dimen/fugu_margin_10" android:layout_marginTop="@dimen/fugu_margin_15" android:layout_marginRight="@dimen/fugu_margin_10" android:text="@string/hippo_request_payment" android:maxLines="1" android:elevation="@dimen/fugu_elevation_4" style="@style/primary_button" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>