<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/rlRoot" android:background="@color/fugu_chat_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:wheel="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/my_toolbar" layout="@layout/fugu_agent_toolbar_center" />
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/tvPoweredBy" android:layout_below="@id/my_toolbar" android:animateLayoutChanges="true">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/retry_layout" android:background="@color/fugu_not_connected" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/my_toolbar">
            <TextView android:textSize="@dimen/fugu_text_size_normal" android:textColor="@color/hippo_white" android:gravity="center" android:id="@id/btnRetry" android:layout_width="wrap_content" android:layout_height="@dimen/fugu_margin_30" />
            <com.hippo.utils.loadingBox.ProgressWheel android:id="@id/retry_loader" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_margin="@dimen/fugu_padding_8" android:layout_marginLeft="5.0dip" android:layout_toRightOf="@id/tvUpdatingConvo" android:layout_centerVertical="true" wheel:matProg_barColor="#ffffffff" wheel:matProg_barWidth="2.0dip" wheel:matProg_fillRadius="false" wheel:matProg_progressIndeterminate="true" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/fragment_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <com.google.android.material.tabs.TabLayout android:id="@id/sliding_tabs" android:layout_width="fill_parent" android:layout_height="wrap_content" wheel:tabMode="fixed" />
        <androidx.viewpager.widget.ViewPager android:id="@id/view_pager" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/llInternet" />
    </LinearLayout>
    <View android:background="@drawable/hippo_bg_disabled" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="150.0dip" android:layout_alignParentBottom="true" />
    <TextView android:textColor="@android:color/white" android:id="@id/tvNewConversation" android:padding="@dimen/fugu_padding_15" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/fugu_margin_15" android:text="@string/fugu_new_conversation" android:layout_above="@id/tvPoweredBy" android:layout_centerHorizontal="true" android:onClick="onClick" />
    <TextView android:textSize="@dimen/fugu_text_size_large" android:textColor="@color/fugu_theme_color_primary" android:gravity="center" android:id="@id/tvNoInternet" android:padding="@dimen/fugu_padding_20" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fugu_no_internet_connection_retry" android:layout_centerInParent="true" android:onClick="onClick" />
    <TextView android:textSize="@dimen/fugu_text_size_intermediate" android:textColor="@color/fugu_text_color_primary" android:gravity="center" android:id="@id/tvPoweredBy" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="20.0dip" android:text="@string/fugu_powered_by" android:layout_alignParentBottom="true" android:onClick="onClick" />
</RelativeLayout>