<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/rootView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="@dimen/fugu_margin_40"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="bottom" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="fill_parent">
        <ImageView android:gravity="bottom" android:id="@id/user_image" android:layout_width="30.0dip" android:layout_height="30.0dip" style="@style/user_image" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/main_layout" android:background="@drawable/hippo_rating_background" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@id/ask_rate_layout" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:gravity="center" android:id="@id/title_view" android:padding="@dimen/fugu_padding_7" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/fugu_margin_10" android:text="@string/hippo_rating_title_text" style="@style/tvfontBold" />
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:padding="@dimen/fugu_padding_5" android:layout_width="fill_parent" android:layout_height="80.0dip">
                <ImageView android:id="@id/terrible_image" android:background="@drawable/APKTOOL_DUMMY_29f" android:layout_width="@dimen/fugu_dp_40" android:layout_height="@dimen/fugu_dp_40" android:layout_marginRight="@dimen/fugu_margin_7" />
                <ImageView android:id="@id/bad_image" android:background="@drawable/APKTOOL_DUMMY_26f" android:layout_width="@dimen/fugu_dp_40" android:layout_height="@dimen/fugu_dp_40" android:layout_marginRight="@dimen/fugu_margin_7" />
                <ImageView android:id="@id/okay_image" android:background="@drawable/APKTOOL_DUMMY_293" android:layout_width="@dimen/fugu_dp_60" android:layout_height="@dimen/fugu_dp_60" android:layout_marginRight="@dimen/fugu_margin_7" />
                <ImageView android:id="@id/good_image" android:background="@drawable/APKTOOL_DUMMY_287" android:layout_width="@dimen/fugu_dp_40" android:layout_height="@dimen/fugu_dp_40" android:layout_marginRight="@dimen/fugu_margin_7" />
                <ImageView android:id="@id/great_image" android:background="@drawable/APKTOOL_DUMMY_289" android:layout_width="@dimen/fugu_dp_40" android:layout_height="@dimen/fugu_dp_40" android:layout_marginRight="@dimen/fugu_margin_7" />
            </LinearLayout>
            <View android:background="@color/fugu_type_message_hint" android:layout_width="fill_parent" android:layout_height="@dimen/fugu_dp_1" />
            <RelativeLayout android:id="@id/bottom_layout" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <RelativeLayout android:id="@id/send_btn" android:visibility="gone" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_alignParentRight="true">
                    <ImageView android:background="@drawable/APKTOOL_DUMMY_227" android:layout_width="24.0dip" android:layout_height="24.0dip" android:layout_centerInParent="true" />
                </RelativeLayout>
                <EditText android:gravity="center_vertical" android:id="@id/ed_rating_txt" android:background="@null" android:padding="@dimen/fugu_padding_5" android:paddingLeft="@dimen/fugu_padding_7" android:paddingRight="@dimen/fugu_padding_7" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="@dimen/fugu_margin_7" android:minHeight="60.0dip" android:hint="Tell us more..." android:layout_toLeftOf="@id/send_btn" style="@style/tvfont" />
                <Button android:textColor="@color/hippo_white" android:id="@id/sendBtn" android:background="@drawable/hippo_button_rounded" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Submit" android:layout_below="@id/ed_rating_txt" style="@style/tvfontBold" />
            </RelativeLayout>
            <Button android:ellipsize="end" android:layout_gravity="center" android:id="@id/buttonSubmit" android:background="@drawable/fugu_rating_btn_selector" android:paddingLeft="@dimen/fugu_padding_10" android:paddingRight="@dimen/fugu_padding_10" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/hippo_button_height" android:layout_marginTop="@dimen/fugu_margin_15" android:text="submit" android:maxLines="1" android:elevation="@dimen/fugu_elevation_4" style="@style/rating_button" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/rated_layout" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:gravity="center" android:id="@id/rated_title" android:paddingLeft="@dimen/fugu_margin_10" android:paddingRight="@dimen/fugu_margin_10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/fugu_margin_20" android:text="@string/hippo_rating_title" style="@style/tvfont" />
            <TextView android:gravity="center" android:id="@id/rated_sub_title" android:paddingLeft="@dimen/fugu_margin_10" android:paddingRight="@dimen/fugu_margin_10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/fugu_margin_10" android:layout_marginBottom="@dimen/fugu_margin_20" android:text="@string/hippo_rated_message" style="@style/tvfont" />
            <LinearLayout android:orientation="vertical" android:id="@id/message_layout" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <View android:background="@color/fugu_type_message_hint" android:layout_width="fill_parent" android:layout_height="@dimen/fugu_dp_1" />
                <TextView android:id="@id/rated_message" android:padding="@dimen/fugu_margin_10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/fugu_margin_10" android:text="@string/hippo_thanks" style="@style/tvfont" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>